syntax = "proto3";

package time;
option go_package = "https://github.com/mfoman/grpc101;time";


service getCurrentTime {
    rpc getTime (GetTimeRequest) returns (GetTimeReply) {}
}

message GetTimeRequest {}

message GetTimeReply {
    string reply = 1;
}
